plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
}

group = 'com.contied'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation platform('org.springframework.boot:spring-boot-dependencies:3.2.4')

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // For AI API/Youtube calls
    
	compileOnly 'org.projectlombok:lombok:1.18.30'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // .env handler
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // Jakarta Annotation (for @PostConstruct in Java 17)
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // JSoup for Web Crawling (Melon scraper)
    implementation 'org.jsoup:jsoup:1.17.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
